# LangGraph_agent

./: .env  .gitignore  LANGCHAIN_TOOLS_GUIDE.md  README.md  file_md.py  full_test.py  main.py  model_think_demo.py  model_think_results.json  output.txt  output_with_progress.txt  pyproject.toml  requirements.txt  run_research.py  start_research_server.py  template_config.json  test_clarify.py  test_pdf.py
__pycache__/: test.html
src/app/: config.py  main.py  prompt.py
src/app/agents/: __init__.py  base_agent.py  research_agent.py
src/app/api/: main.py  research.html
src/app/state/: __init__.py  agent_state.py  research_state.py
src/app/templates/: README.md  __init__.py  template_manager.py  templates.json
src/app/tools/: __init__.py  simple_tools.py
src/app/utils/: streaming.py  utils.py
tests/: conftest.py  test_outline_agent_minimal.py  test_research_run.py  test_research_smoke.py
